fixed recaptcha not showing up

--- a/src/App.css
+++ b/src/App.css
@@ -257,7 +257,7 @@
   background-color: #2d2d2d;
   padding: 1rem;
   position: absolute;
-  bottom: -900px;
+  bottom: -500px;
   left: 0;
   right: 0;
   border-top: 1px solid #444;
